--- a/styles/style.css
+++ b/styles/style.css
@@ -436,10 +436,10 @@ a:hover {
 
 /* For mobile browsing */
 
-@media only screen and (max-width: 850px) {
+@media only screen and (max-width: 600px) {
 
     body {
-        margin: 0;
+        margin: 10px 0;
         padding: 0;
         display: flex;
         flex-direction: column;
@@ -462,12 +462,6 @@ a:hover {
         flex-direction: column;
         justify-content: center;
         align-items: center;
-    }
-
-    .menu-options {
-        margin: 0;
-        padding: 10px;
-        display: block;
     }
     
     .social-menu {
@@ -506,6 +500,23 @@ a:hover {
         column-gap: 70px;
         justify-content: space-evenly;
         align-items: center;
+    }
+
+    .menu-options {
+        margin: 0;
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+    }
+    
+    .content-menu {
+        margin: 0;
+        padding: 0;
+        display: flex;
+        flex-direction: row;
+        float: left;
+        gap: 10px;
     }
 
     .full-menu {
@@ -585,7 +596,7 @@ a:hover {
     .projects {
         margin: 0;
         padding: 0;
-        width: 100%;
+        width: 40vh;
         display: flex;
         flex-direction: column;
         align-items: center;
