--- a/styles/style.css
+++ b/styles/style.css
@@ -491,7 +491,7 @@ a:hover {
         border: 8px ridge green;
         margin: 0;
         padding: 0;
-        width: 490px;
+        width: 41vh;
     }
 
     .content-menu {
