--- a/styles/style.css
+++ b/styles/style.css
@@ -626,6 +626,7 @@ a:hover {
         flex-direction: column;
         margin: 0;
         padding: 20px;
+        width: 41vh;
     }
 
     .desc {
