--- a/styles/style.css
+++ b/styles/style.css
@@ -680,7 +680,7 @@ a:hover {
     .proj-img {
         margin: 0;
         padding: 0;
-        width: 100%;
+        width: 320px;
     }
 
     .mobile-only {
