--- a/styles/style.css
+++ b/styles/style.css
@@ -393,7 +393,7 @@ a:hover {
 }
 
 
-@media only screen and (max-width: 1100px) {
+@media only screen and (max-width: 1050px) {
 
     .projects {
         margin: 0;
@@ -431,12 +431,36 @@ a:hover {
         gap: 70px;
         padding-bottom: 40px;
     }
+
+    #td-collection {
+        margin: 0;
+        padding: 25px 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 25px;
+    }
+
+    .td-projects {
+        margin: 0;
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .td-img {
+        border: 8px ridge green;
+        margin: 0;
+        padding: 0;
+        width: 75vh;
+    }
 }
 
 
 /* For mobile browsing */
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 800px) {
 
     body {
         margin: 10px 0;
@@ -479,27 +503,32 @@ a:hover {
     }
 
     .td-projects {
-        margin: 1px;
+        margin: 0;
         padding: 0;
         display: flex;
         flex-direction: column;
-        text-align: right;
-        width: 100%;
     }
 
     .td-img {
         border: 8px ridge green;
         margin: 0;
         padding: 0;
-        width: 92%;
+        width: 75vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 
     .content-menu {
+        margin: 0;
+        padding: 0;
         display: flex;
         flex-direction: row;
         column-gap: 70px;
         justify-content: space-evenly;
         align-items: center;
+        float: left;
+        gap: 10px;
     }
 
     .menu-options {
@@ -510,14 +539,7 @@ a:hover {
         gap: 20px;
     }
     
-    .content-menu {
-        margin: 0;
-        padding: 0;
-        display: flex;
-        flex-direction: row;
-        float: left;
-        gap: 10px;
-    }
+
 
     .full-menu {
         margin: 0;
