--- a/styles/style.css
+++ b/styles/style.css
@@ -518,6 +518,7 @@ a:hover {
         border: 8px ridge green;
         margin: 0;
         padding: 0;
+        width: 500px;
         display: flex;
         align-items: center;
         justify-content: center;
