--- a/assets/fonts/webfontkit/stylesheet.css
+++ b/assets/fonts/webfontkit/stylesheet.css
@@ -3,7 +3,7 @@
 
 
 @font-face {
-    font-family: 'jogan_softregular';
+    font-family: "jogan";
     src: url('/assets/fonts/webfontkit/jogansoft-rgwky-webfont.woff2') format('woff2'),
          url('/assets/fonts/webfontkit/jogansoft-rgwky-webfont.woff') format('woff');
     font-weight: normal;
