--- a/styles/style.css
+++ b/styles/style.css
@@ -138,6 +138,7 @@ html {
 }
 
 #social-menu img {
+    padding: 0 5px;
     width: 20px;
 }
 
@@ -547,6 +548,16 @@ a:hover {
     
     .social-menu {
         display: none;
+    }
+
+    #social-menu {
+        margin: 3px auto;
+        text-align: center;
+    }
+    
+    #social-menu img {
+        padding: 0 10px;
+        width: 20px;
     }
 
     #about-me {
