--- a/styles/style.css
+++ b/styles/style.css
@@ -851,5 +851,12 @@ a:hover {
         display: flex;
     }
 
+    .section-desc {
+        margin: 0;
+        margin-top: -10px;
+        margin-bottom: 20px;
+        padding: 0;
+        font-size: 16px;
+    }
 
 }
