--- a/styles/style.css
+++ b/styles/style.css
@@ -591,7 +591,7 @@ header {
     }
 
     header {
-        width: 100vw;
+        width: 100%;
     }
 
     hr {
@@ -731,9 +731,9 @@ header {
     }
 
     .main-content {
-        margin: 140px auto;
+        margin: 150px auto;
         padding: 0 20px;
-        width: 90vw;
+        width: fit-content;
         display: flex;
         flex-direction: column;
         gap: 10px;
