--- a/styles/style.css
+++ b/styles/style.css
@@ -733,7 +733,7 @@ header {
     .main-content {
         margin: 150px auto;
         padding: 0 20px;
-        width: fit-content;
+        width: 100%;
         display: flex;
         flex-direction: column;
         gap: 10px;
