--- a/styles/style.css
+++ b/styles/style.css
@@ -685,7 +685,7 @@ header {
     #menu-option {
         border: 1px solid #0f0f0f;
         margin: 0 auto;
-        padding: 12px 42px;
+        padding: 12px auto;
         text-decoration: none;
         font-size: 16px;
         letter-spacing: .8px;
