--- a/styles/style.css
+++ b/styles/style.css
@@ -732,7 +732,7 @@ header {
 
     .main-content {
         margin: 150px auto;
-        padding: 0 20px;
+        padding: 0 auto;
         width: 100%;
         display: flex;
         flex-direction: column;
