--- a/styles/style.css
+++ b/styles/style.css
@@ -666,11 +666,6 @@ header {
     
     .radio-icon {
         display: none;
-        margin: 0 auto;
-        padding: 6px;
-        width: 20px;
-        background-color: #0f0f0f;
-        border-radius: 50px;
     }
 
     .menu-options {
@@ -711,12 +706,12 @@ header {
 
     .sub-menu {
         margin: 10px auto;
-        padding: 0;
+        padding: 0 auto;
         font-size: 15px;
         display: flex;
         justify-content: center;
         align-items: center;
-        gap: 50px;
+        gap: 40px;
     }
     
     .sub-menu a {
@@ -731,7 +726,7 @@ header {
     }
 
     .main-content {
-        margin: 150px auto;
+        margin: 180px auto;
         padding: 0 auto;
         width: 100%;
         display: flex;
