--- a/styles/style.css
+++ b/styles/style.css
@@ -726,11 +726,7 @@ header {
     }
 
     .main-content {
-        margin: 140px auto;
-        padding: 0 auto;
-        display: flex;
-        flex-direction: column;
-        gap: 10px;
+        margin: 0 auto;
     }
 
     .title-page {
