--- a/styles/style.css
+++ b/styles/style.css
@@ -792,7 +792,7 @@ header {
     
     .title-container {
         margin: 0 auto;
-        padding: 0 10px;
+        padding: 0 auto;
         display: flex;
         flex-direction: column;
         gap: 2px;
