--- a/styles/style.css
+++ b/styles/style.css
@@ -706,11 +706,12 @@ header {
 
     .sub-menu {
         margin: 10px auto;
-        padding: 0 auto;
+        padding: 0;
         font-size: 15px;
         display: flex;
         justify-content: center;
         align-items: center;
+        gap: 40px;
     }
     
     .sub-menu a {
