--- a/styles/style.css
+++ b/styles/style.css
@@ -706,7 +706,7 @@ header {
 
     .sub-menu {
         margin: 10px auto;
-        padding: 0;
+        padding: 0 10px;
         font-size: 15px;
         display: flex;
         justify-content: center;
@@ -716,7 +716,7 @@ header {
     
     .sub-menu a {
         margin: 0 auto;
-        padding: 5px auto;
+        padding: 5px 10px;
         text-decoration: none;
         border: 1px solid #4DA62F;
         border-radius: 40px;
@@ -727,12 +727,13 @@ header {
 
     .main-content {
         margin: 0 auto;
+        padding: 0;
         width: 99vw;
     }
 
     .title-page {
         margin: 0 auto;
-        padding: 0;
+        padding: 12px;
         font-size: 30px;
         letter-spacing: 1px;
         display: flex;
