--- a/styles/style.css
+++ b/styles/style.css
@@ -817,11 +817,11 @@ header {
     }
 
     .td-img {
-        border: 8px ridge #4DA62F;
+        border: 7px ridge green;
         margin: 0 auto;
         padding: 0;
-        width: 400px;
-        height: 400px;
+        width: 380px;
+        height: 20rem;
         object-fit: cover;
     }
 
@@ -829,16 +829,14 @@ header {
         margin: 0 auto;
         padding: 25px 0;
         display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
+        flex-direction: column;
+        justify-content: center;
         align-items: center;
         gap: 25px;
     }
     
     .td-projects {
-        margin: 1px auto;
+        margin: 0 auto;
         padding: 0;
-        display: flex;
-        flex-direction: column;
     }
 }
