--- a/styles/style.css
+++ b/styles/style.css
@@ -820,7 +820,7 @@ header {
         border: 7px ridge green;
         margin: 0 auto;
         padding: 0;
-        width: 380px;
+        width: 90%;
         height: 20rem;
         object-fit: cover;
     }
@@ -828,6 +828,7 @@ header {
     #td-collection {
         margin: 0 auto;
         padding: 25px 0;
+        width: 100%;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -838,5 +839,6 @@ header {
     .td-projects {
         margin: 0 auto;
         padding: 0;
+        width: 100%;
     }
 }
