--- a/styles/style.css
+++ b/styles/style.css
@@ -636,6 +636,7 @@ header {
         width: 100%;
     
         display: flex;
+        flex-wrap: wrap;
         justify-content: center;
         align-items: center;
         border-radius: 0;
