--- a/styles/style.css
+++ b/styles/style.css
@@ -778,6 +778,7 @@ header {
         display: flex;
         justify-content: center;
         align-items: center;
+        text-align: center;
     }
 
     .projects {
