--- a/styles/style.css
+++ b/styles/style.css
@@ -729,7 +729,7 @@ header {
     }
 
     body {
-        margin: 10px auto;
+        margin: 0 auto;
         padding: 0;
         display: flex;
         flex-direction: column;
@@ -738,6 +738,16 @@ header {
 
     header {
         width: 100%;
+    }
+
+    .bit-border {
+        margin: 0 auto;
+        width: fit-content;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        size: auto;
     }
 
     hr {
