--- a/styles/style3.css
+++ b/styles/style3.css
@@ -7,6 +7,10 @@
     line-height: 1;
 }
 
+body {
+    margin: 0 auto;
+}
+
 html {
     margin: 0 auto;
     background-color: #0f0f0f;
@@ -30,8 +34,11 @@ html {
 
 .bit-border {
     margin: 0 auto;
-    position: relative;
-    top: 100px;
+    width: 400px;
+    position: absolute;
+    top: 53%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     animation-delay: 2s;
     animation: fade 1.5s ease-in-out 0s forwards;
 }
@@ -138,21 +145,22 @@ html {
 /* Menu */
 
 .full-menu {
-    width: 900px;
+    margin: 0 auto;
+    width: fit-content;
 }
 
 .menu-landing {
     color: #0f0f0f;
     margin: 25px auto;
     padding: 0;
-    display: flex;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 
+    display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
+    grid-template-rows: auto;
     justify-content: center;
     text-align: center;
     gap: 20px;
@@ -160,23 +168,11 @@ html {
     z-index: 5;
 }
 
-#menu-option {
-    border: 1px solid #0f0f0f;
-    margin: 0 auto;
-    padding: 22px 18px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-decoration: none;
-    font-size: 16px;
-    letter-spacing: .8px;
-}
-
 #menu-item {
     border: 1px solid #0f0f0f;
     margin: 0 auto;
-    padding: 10px 18px;
-    width: 150px;
+    padding: 10px 12px;
+    width: 140px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -441,10 +437,6 @@ html {
 
 .landing-main {
     margin: 0 auto;
-    margin-top: -100px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 }
 
 .landing-video {
@@ -454,7 +446,6 @@ html {
     background-size: cover;
     background-position: 60%;
     object-fit: cover;
-    position: absolute;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -474,7 +465,7 @@ html {
 .bit-box-logo {
     margin: 0 auto;
     position: absolute;
-    top: 50%;
+    top: 48%;
     left: 50%;
     transform: translate(-50%, -50%);
 
@@ -903,3 +894,61 @@ html {
     z-index: 4;
 }
 
+@media only screen and (max-width: 870px) {
+
+    .bit-border {
+        margin: 0 auto;
+        width: 400px;
+        position: absolute;
+        top: 58%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        animation-delay: 2s;
+        animation: fade 1.5s ease-in-out 0s forwards;
+    }
+
+    .menu-landing {
+        color: #0f0f0f;
+        margin: 25px auto;
+        padding: 0;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    
+        display: flex;
+        flex-direction: column;
+        grid-template-rows: auto;
+        justify-content: center;
+        text-align: center;
+        gap: 20px;
+        list-style-type: none;
+        z-index: 5;
+    }
+
+    .bit-box-logo {
+        margin: 0 auto;
+        position: absolute;
+        top: 40%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    
+        animation: fade 1.5s ease-in-out 0s forwards;
+    }
+
+    #social-menu {
+        margin: 0 auto;
+        text-align: center;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        gap: 30px;
+        position: absolute;
+        left: 50%;
+        right: 50%;
+        top: 150px;
+        z-index: 4;
+    }
+
+}
