--- a/styles/style3.css
+++ b/styles/style3.css
@@ -901,53 +901,45 @@ html {
         width: 400px;
         position: absolute;
         top: 58%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        animation-delay: 2s;
-        animation: fade 1.5s ease-in-out 0s forwards;
     }
 
     .menu-landing {
-        color: #0f0f0f;
-        margin: 25px auto;
-        padding: 0;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-    
         display: flex;
         flex-direction: column;
-        grid-template-rows: auto;
-        justify-content: center;
-        text-align: center;
-        gap: 20px;
-        list-style-type: none;
-        z-index: 5;
     }
 
     .bit-box-logo {
-        margin: 0 auto;
-        position: absolute;
         top: 40%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-    
-        animation: fade 1.5s ease-in-out 0s forwards;
     }
 
     #social-menu {
-        margin: 0 auto;
-        text-align: center;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        gap: 30px;
-        position: absolute;
-        left: 50%;
-        right: 50%;
         top: 150px;
+        z-index: 4;
+    }
+
+    
+    .eight-bit-shadow-logo {
+        width: 335px;
+        height: 119px;
+        left: 10px;
+        top: 5px;
+        z-index: 2;
+    }
+
+    .eight-bit-logo {
+        width: 340px;
+        height: 120px;
+        left: 0px;
+        top: -120px;
+        z-index: 3;
+    }
+
+
+    .eight-bit-inner-logo {
+        width: 320px;
+        height: 100px;
+        left: -15px;
+        top: 5px;
         z-index: 4;
     }
 
