--- a/styles/styles.css
+++ b/styles/styles.css
@@ -79,8 +79,9 @@ a:visited {
 
 .background-img {
     width: 100%;
-    height: 350dvh;
+    height: 2400px;
     background-image: url(/assets/images/landing-bg.jpg);
+    background-color: green;
     background-size: cover;
     background-position: bottom;
     object-fit: cover;
@@ -223,13 +224,14 @@ a:visited {
 
     .background-img {
         width: 100%;
-        height: 590dvh;
+        height: 4000px;
         background-position: top;
     }
 
     .background-img-me {
         height: 170dvh;
         background-image: url(/assets/images/me-1.jpg);
+        background-position: center;
     }
 
     .titlebanner {
@@ -270,5 +272,33 @@ a:visited {
         flex-direction: column;
         top: 150px;
         gap: 30px;
+    }
+
+    .projects-left {
+        margin: 0;
+        padding: 10px;
+        background-color: white;
+        width: 370px;
+        position: relative;
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .projects-right {
+        margin: 0;
+        padding: 10px;
+        background-color: white;
+        width: 370px;
+        position: relative;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .proj-img {
+        width: 370px;
+    }
+    
+    .title-container {
+        width: 370px;
     }
 }
