--- a/styles/styles.css
+++ b/styles/styles.css
@@ -230,7 +230,7 @@ a:visited {
     }
 
     .background-img-me {
-        height: 210dvh;
+        height: 1200px;
         background-image: url(/assets/images/me-1.jpg);
         background-position: 33%;
     }
