--- a/styles/styles.css
+++ b/styles/styles.css
@@ -91,7 +91,7 @@ a:visited {
 
 .background-img-me {
     width: 100%;
-    height: 130dvh;
+    height: 1050px;
     background-image: url(/assets/images/me-1.jpg);
     background-size: cover;
     background-position: center;
@@ -219,7 +219,14 @@ a:visited {
     position: relative;
 }
 
-@media only screen and (max-width: 700px) {
+@media screen and (max-width: 1100px) {
+
+    .background-img-me {
+        height: 1200px;
+    }
+}
+
+@media only screen and (max-width: 740px) {
 
     .background-img {
         width: 100%;
@@ -231,7 +238,6 @@ a:visited {
     .background-img-me {
         height: 1350px;
         background-image: url(/assets/images/me-1.jpg);
-        background-position: 33%;
     }
 
     .titlebanner {
