--- a/styles/styles.css
+++ b/styles/styles.css
@@ -238,6 +238,7 @@ a:visited {
     .background-img-me {
         height: 1350px;
         background-image: url(/assets/images/me-1.jpg);
+        background-position: center;
     }
 
     .titlebanner {
