--- a/styles/styles.css
+++ b/styles/styles.css
@@ -80,9 +80,9 @@ a:visited {
 .background-img {
     width: 100%;
     height: 2400px;
-    background-image: url(/assets/images/landing-bg.jpg);
+    background-image: url(/assets/images/scanned-img/tree-1.jpg);
     background-size: cover;
-    background-position: bottom;
+    background-position: center;
     object-fit: cover;
     position: absolute;
     display: flex;
