--- a/styles/styles.css
+++ b/styles/styles.css
@@ -91,7 +91,7 @@ a:visited {
 
 .background-img-me {
     width: 100%;
-    height: 1050px;
+    height: 1150px;
     background-image: url(/assets/images/me-1.jpg);
     background-size: cover;
     background-position: center;
@@ -222,7 +222,7 @@ a:visited {
 @media screen and (max-width: 1100px) {
 
     .background-img-me {
-        height: 1200px;
+        height: 1300px;
     }
 }
 
@@ -238,7 +238,7 @@ a:visited {
     .background-img-me {
         height: 1350px;
         background-image: url(/assets/images/me-1.jpg);
-        background-position: center;
+        background-position: 35%;
     }
 
     .titlebanner {
