--- a/styles/styles.css
+++ b/styles/styles.css
@@ -230,9 +230,8 @@ a:visited {
 
     .background-img {
         width: 100%;
-        height: 4000px;
-        background-position: top;
-        transform: rotateX(180deg);
+        height: 3900px;
+        background-position: right;
     }
 
     .background-img-me {
