--- a/styles/styles.css
+++ b/styles/styles.css
@@ -230,8 +230,9 @@ a:visited {
 
     .background-img {
         width: 100%;
-        height: 3900px;
-        background-position: right;
+        height: 600%;
+        display: flex;
+        background-position: 75%;
     }
 
     .background-img-me {
