--- a/styles/styles.css
+++ b/styles/styles.css
@@ -26,7 +26,7 @@ body {
 
 .contact {
     position: relative;
-    top: 90px;
+    top: 20px;
     left: 8%;
 }
 
@@ -79,7 +79,7 @@ a:visited {
 
 .background-img {
     width: 100%;
-    height: 2700px;
+    height: 3600px;
     background-image: url(/assets/images/scanned-img/tree-1.jpg);
     background-size: cover;
     background-position: center;
@@ -230,7 +230,7 @@ a:visited {
 
     .background-img {
         width: 100%;
-        height: 600%;
+        height: 850%;
         display: flex;
         background-position: 75%;
     }
@@ -249,6 +249,10 @@ a:visited {
         width: 260px;
     }
     
+    .item {
+        top: 0;
+    }
+
     .contact {
         position: relative;
         top: 90px;
