--- a/styles/styles.css
+++ b/styles/styles.css
@@ -215,7 +215,7 @@ a:visited {
     flex-direction: column;
 }
 
-.foot {
+footer {
     position: relative;
 }
 
@@ -255,8 +255,8 @@ a:visited {
 
     .contact {
         position: relative;
-        top: 90px;
-        left: 15%;
+        top: 50px;
+        left: 5%;
     }
 
     .about-pgraph {
@@ -274,8 +274,8 @@ a:visited {
         flex-direction: column;
     }
 
-    .foot {
-        top: 100px;
+    footer {
+        top: 10px;
     }
 
     .projs-flow {
