--- a/styles/styles.css
+++ b/styles/styles.css
@@ -79,7 +79,7 @@ a:visited {
 
 .background-img {
     width: 100%;
-    height: 3600px;
+    height: 3100px;
     background-image: url(/assets/images/scanned-img/tree-1.jpg);
     background-size: cover;
     background-position: center;
@@ -120,7 +120,7 @@ a:visited {
     align-items: center;
     position: relative;
     top: 120px;
-    gap: 5%;
+    gap: 80px;
 }
 
 
@@ -216,6 +216,7 @@ a:visited {
 
 footer {
     position: relative;
+    top: 230px;
 }
 
 @media screen and (max-width: 1100px) {
