--- a/styles/styles.css
+++ b/styles/styles.css
@@ -83,6 +83,7 @@ a:visited {
     background-image: url(/assets/images/scanned-img/tree-1.jpg);
     background-size: cover;
     background-position: center;
+    background-attachment: fixed;
     object-fit: cover;
     position: absolute;
     z-index: -1;
