--- a/styles/styles.css
+++ b/styles/styles.css
@@ -231,7 +231,7 @@ footer {
 
     .background-img {
         width: 100%;
-        height: 810%;
+        height: 5300px;
         display: flex;
         background-image: url(/assets/images/scanned-img/tree-2.jpg);
         background-position: 75%;
