--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,7 +9,7 @@ body {
 }
 
 .titlebanner {
-    width: 600px;
+    width: 620px;
     padding: 10px;
     position: relative;
     background-color: white;
@@ -18,6 +18,7 @@ body {
 
 .item {
     width: fit-content;
+    text-wrap: wrap;
     padding: 10px;
     position: relative;
     background-color: white;
@@ -218,6 +219,10 @@ a:visited {
 footer {
     position: relative;
     top: 230px;
+}
+
+.viz {
+    visibility: hidden;
 }
 
 @media screen and (max-width: 1100px) {
