--- a/styles/styles.css
+++ b/styles/styles.css
@@ -235,11 +235,9 @@ footer {
 @media only screen and (max-width: 740px) {
 
     .background-img {
-        width: 100%;
         height: 5300px;
-        display: flex;
         background-image: url(/assets/images/scanned-img/tree-2.jpg);
-        background-position: 60%;
+        background-position: 60% top;
     }
 
     .background-img-me {
