--- a/styles/styles.css
+++ b/styles/styles.css
@@ -237,12 +237,13 @@ footer {
 
 @media only screen and (max-width: 740px) {
 
-    .background-img {
-        height: 5300px;
-        object-fit: fill;
-        background-image: url(/assets/images/scanned-img/tree-2.jpg);
-        background-position: 60% top;
+    .bg-img {
+        object-fit: cover;
     }
+
+    .bg-img img {
+        height: 800dvh;
+    };
     
     .background-portrait img {
         height: 1550px;
