--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,17 +1,30 @@
-body {
+body, html {
     margin: 0 auto;
+    height: 100%;
 }
 
 .bg-img {
-    position: absolute;
-    width: 100%;
+    background-position: center;
+    background-repeat: repeat;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+   
     z-index: -1;
+
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
 }
 
 .bg-img img {
     width: 100%;
-    height: 480dvh;
-    object-fit: center;
+    height: 100%;
+    object-fit: cover;
 }
 
 #base-grid {
@@ -92,17 +105,27 @@ a:visited {
 }
 
 .background-portrait {
+    background-position: center;
+    background-repeat: repeat;
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+   
+    z-index: -1;
+
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
-    object-fit: cover;
-    position: absolute;
-    z-index: -2;
+    height: 100%;
+    overflow: hidden;
 }
 
 .background-portrait img {
     width: 100%;
-    height: 1300px;
+    height: 100%;
     object-fit: cover;
-    z-index: -2;
 }
 
 .background-img-three {
@@ -221,35 +244,39 @@ a:visited {
 
 footer {
     position: relative;
-    top: 230px;
+    top: 500px;
 }
 
 .viz {
     visibility: hidden;
 }
 
-@media screen and (max-width: 1100px) {
-
-    .background-portrait img {
-        height: 1550px;
-    }
-}
-
 @media only screen and (max-width: 740px) {
 
-    .bg-img {
+    .background-portrait {
+        background-position: center;
+        background-repeat: repeat;
+        background-size: cover;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+       
+        z-index: -1;
+    
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+    }
+    
+    .background-portrait img {
+        width: 100%;
+        height: 140%;
         object-fit: cover;
     }
 
-    .bg-img img {
-        height: 800dvh;
-    };
-    
-    .background-portrait img {
-        height: 1550px;
-        object-fit: cover;
-        z-index: -2;
-    }
 
     .titlebanner {
         width: 320px;
