--- a/styles/styles.css
+++ b/styles/styles.css
@@ -164,54 +164,57 @@ a:visited {
 }
 
 .prj-item .prj-img {
-    margin: 0 auto;
+    margin-bottom: 5px;
     padding: 0;
+    width: 300px;
+    height: 200px;
+    overflow: hidden;
+    box-shadow: 0 3px 10px rgba(0, 0, 0, .2);
 }
 
 .prj-item .prj-img img {
     width: 100%;
-    height: 200px;
+    height: 100%;
     object-fit: cover;
 }
 
+.prj-item .prj-img:hover img {
+    transform: scale(1.1);
+}
+
+.prj-info {
+    margin: 0 auto;
+    width: 100%;
+    font-family: 'DM Mono', monospace;
+}
+
 .prj-title {
-    margin: 0 auto;
-    width: fit-content;
-}
-
-.title-runtime {
-    margin: 0 auto;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    gap: 6px;
-}
-
-.proj-title {
     margin: 0;
+    margin-bottom: 8px;
     padding: 0;
     font-size: 20px;
     font-weight: 500;
     font-style: italic;
+    
     text-decoration-line: underline;
     text-transform: uppercase;
     text-underline-offset: 5px;
     text-align: left;
 }
 
-.sub-desc {
-    margin: 0;
+.date-length {
+    margin: 0 auto;
     padding: 0;
     font-size: 11px;
-    text-align: left;
 }
 
-.proj-desc {
+.prj-desc {
     margin: 8px 0;
     padding: 0;
-    font-size: 14px;
+    font-size: 13px;
     justify-content: left;
     letter-spacing: 0;
+    font-weight: 500;
 }
 
 .about-pgraph {
@@ -254,6 +257,11 @@ footer {
 
     .prj-item {
         width: 350px;
+    }
+
+    .prj-item .prj-img {
+        width: 350px;
+        height: 280px;
     }
 
     .background-portrait {
