--- a/styles/styles.css
+++ b/styles/styles.css
@@ -37,36 +37,55 @@ body, html {
     width: 590px;
     padding: 10px;
     position: relative;
-    background-color: white;
+    color: white;
+    background-color: black;
     top: 30px;
 }
 
-.item {
+.titlebanner .title {
+    font-family: 'DM Mono', monospace;
+    font-weight: 400;
+    word-wrap: break-word;
+    margin: 0px;
+    text-align: left;
+    hyphens: manual;
+    letter-spacing: -1px;
+    font-size: 30px;
+    line-height: 33px;
+}
+
+.contact-card {
     width: fit-content;
     text-wrap: wrap;
     padding: 10px;
-    position: relative;
-    background-color: white;
-    top: 50px;
-}
-
-.contact {
+    color: white;
+    background-color: black;
     position: relative;
     top: 80px;
     left: 8%;
 }
 
-.title {
-    background-color: transparent;
+.contact-card h2 {
+    font-size: 15px;
+    line-height: 18px;
+    width: fit-content;
+    min-width: 250px;
     font-family: 'DM Mono', monospace;
     font-weight: 400;
     word-wrap: break-word;
-    top: 0px;
-    margin: 0px;
+    margin: 0 auto;
     text-align: left;
-    hyphens: manual;
-    margin-block-start: 0;
-    letter-spacing: -1px;
+}
+
+.link {
+    font-family: 'DM Mono', monospace;
+    font-weight: 400;
+    color: #4DA62F;
+    text-decoration: underline;
+}
+
+a:hover {
+    color: white
 }
 
 a:visited {
@@ -75,35 +94,7 @@ a:visited {
     text-decoration: underline;
 }
 
-.link {
-    font-family: 'DM Mono', monospace;
-    color: #4DA62F;
-    background-color: transparent;
-    text-decoration: underline;
-}
-
-.link:hover {
-    color: black;
-}
-
-.bold {
-    font-weight: 600;
-}
-
-.subtitle {
-    background-color: transparent;
-    width: 460px;
-    min-width: 250px;
-    font-family: 'DM Mono', monospace;
-    font-weight: 400;
-    word-wrap: break-word;
-    top: 0;
-    margin: 0;
-    text-align: left;
-    margin-block-start: 0;
-}
-
-.background-portrait {
+.bg-me {
     background-position: center;
     background-repeat: repeat;
     background-size: cover;
@@ -121,22 +112,12 @@ a:visited {
     overflow: hidden;
 }
 
-.background-portrait img {
+.bg-me img {
     width: 100%;
     height: 100%;
     object-fit: cover;
-}
-
-.background-img-three {
-    width: 100%;
-    height: 100dvh;
-    background-size: cover;
-    background-position: 0;
-    object-fit: cover;
-    position: absolute;
-    top: 200%;
-    display: flex;
-    z-index: -3;
+    object-position: 20% 65%;
+    transform: scale(1.3);
 }
 
 /* Project Grid */
@@ -158,7 +139,7 @@ a:visited {
     padding: 12px;
     width: 300px;
     height: fit-content;
-    background-color: white;
+    background-color: black;
     border-radius: 2px;
     display: none;
 }
@@ -206,12 +187,14 @@ a:visited {
     text-transform: uppercase;
     text-underline-offset: 5px;
     text-align: left;
+    color: white;
 }
 
 .date-length {
     margin: 0 auto;
     padding: 0;
     font-size: 11px;
+    color: white;
 }
 
 .prj-desc {
@@ -221,28 +204,40 @@ a:visited {
     justify-content: left;
     letter-spacing: 0;
     font-weight: 500;
+    color: white;
 }
 
-.about-pgraph {
+.about-container {
     margin: 0 200px;
     display: grid;
     grid-template-columns: 1fr;
     justify-content: center;
     align-items: center;
     position: relative;
-    top: 140px;
+    top: 100px;
     gap: 5%;
+    border-radius: 2px;
 }
 
-.about {
-    margin: 0;
+.about-info {
+    margin: 0 auto;
     padding: 10px;
-    background-color: white;
+    max-width: 750px;
+    color: white;
+    background-color: black;
     width: fit-content;
+}
+
+.about-container .about-info p {
+    font-family: 'DM Mono', monospace;
+    font-weight: 400;
+    word-wrap: break-word;
+}
+
+.about-info span img {
+    width: 20px;
     position: relative;
-    top: -30px;
-    display: flex;
-    flex-direction: column;
+    top: 4.8px;
 }
 
 #load-more {
@@ -250,7 +245,7 @@ a:visited {
     margin-top: 140px;
     padding: 13px 30px;
     border: 1px solid #4DA62F;
-    color: white;
+    color: black;
     justify-content: center;
     text-align: center;
     
@@ -262,9 +257,15 @@ a:visited {
 }
 
 #load-more:hover {
+    color: white;
     background-color: black;
     border: 1px solid black;
     border-radius: 2px;
+}
+
+@media only screen and (max-width: 1200px) {
+    .prj-grid {
+        grid-template-columns: 1fr 1fr;
 }
 
 @media only screen and (max-width: 740px) {
