--- a/styles/styles.css
+++ b/styles/styles.css
@@ -284,7 +284,7 @@ a:visited {
         height: 280px;
     }
 
-    .background-portrait {
+    .bg-me {
         background-position: center;
         background-repeat: repeat;
         background-size: cover;
@@ -302,47 +302,29 @@ a:visited {
         overflow: hidden;
     }
     
-    .background-portrait img {
+    .bg-me img {
         width: 100%;
         height: 140%;
-        object-fit: cover;
+        object-position: 40% 65%;
+        transform: scale(1.3);
     }
-
 
     .titlebanner {
         width: 320px;
     }
 
-    .subtitle {
-        width: 260px;
-    }
-    
-    .item {
-        top: 70px;
-    }
-
-    .contact {
-        position: relative;
-        left: 5%;
-    }
-
-    .about-pgraph {
+    .about-container {
         margin: 0 20px;
     }
     
-    .about {
+    .about-info {
         margin: 0;
         padding: 10px;
-        background-color: white;
         width: fit-content;
         position: relative;
         top: -30px;
         display: flex;
         flex-direction: column;
-    }
-
-    footer {
-        top: 270px;
     }
 
     .projs-flow {
