--- a/styles/styles.css
+++ b/styles/styles.css
@@ -266,7 +266,17 @@ a:visited {
 @media only screen and (max-width: 1200px) {
     .prj-grid {
         grid-template-columns: 1fr 1fr;
-}
+    }
+
+    .about-container {
+        margin: 0 20px;
+    }
+
+    .bg-me img {
+        height: 100%;
+        object-position: 10% 60%;
+        transform: scale(1.3);
+    }
 
 @media only screen and (max-width: 740px) {
 
@@ -304,8 +314,8 @@ a:visited {
     
     .bg-me img {
         width: 100%;
-        height: 140%;
-        object-position: 40% 65%;
+        height: 110%;
+        object-position: 30%;
         transform: scale(1.3);
     }
 
