--- a/styles/styles.css
+++ b/styles/styles.css
@@ -277,8 +277,14 @@ a:visited {
         object-position: 10% 60%;
         transform: scale(1.3);
     }
+}
 
 @media only screen and (max-width: 740px) {
+
+    .contact-card {
+        top: 80px;
+        left: 0;
+    }
 
     .prj-grid {
         grid-template-columns: 1fr;
@@ -335,40 +341,5 @@ a:visited {
         top: -30px;
         display: flex;
         flex-direction: column;
-    }
-
-    .projs-flow {
-        display: flex;
-        flex-direction: column;
-        top: 100px;
-        gap: 50px;
-    }
-
-    .projects-left {
-        margin: 0;
-        padding: 10px;
-        background-color: white;
-        width: 350px;
-        position: relative;
-        display: flex;
-        flex-direction: column;
-    }
-    
-    .projects-right {
-        margin: 0;
-        padding: 10px;
-        background-color: white;
-        width: 350px;
-        position: relative;
-        display: flex;
-        flex-direction: column;
-    }
-
-    .proj-img {
-        width: 350px;
-    }
-    
-    .title-container {
-        width: 350px;
     }
 }
