--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,10 +13,8 @@ body, html {
     z-index: -1;
 
     position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    width: 100dvw;
+    height: 100dvh;
     overflow: hidden;
 }
 
