--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,6 @@
 body, html {
     margin: 0 auto;
+    background-color: transparent;
 }
 
 .bg-img {
@@ -15,7 +16,7 @@ body, html {
     position: fixed;
     width: 100dvw;
     height: 100dvh;
-    overflow: hidden;
+    overflow: auto;
 }
 
 .bg-img img {
@@ -82,15 +83,15 @@ body, html {
     text-decoration: underline;
 }
 
-a:hover {
-    color: white
-}
+    a:hover {
+        color: white
+    }
 
-a:visited {
-    color: #4DA62F;
-    background-color: transparent;
-    text-decoration: underline;
-}
+    a:visited {
+        color: #4DA62F;
+        background-color: transparent;
+        text-decoration: underline;
+    }
 
 .bg-me {
     background-position: center;
@@ -125,7 +126,7 @@ a:visited {
     padding: 2px;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-    gap: 20px;
+    gap: 30px 10px;
     max-width: 1100px;
     position: relative;
     top: 100px;
@@ -148,14 +149,24 @@ a:visited {
     display: inline-block;
 }
 
-.prj-item .prj-img {
+.prj-img {
     margin-bottom: 5px;
     padding: 0;
     width: 300px;
-    height: 200px;
+    height: 240px;
     overflow: hidden;
     box-shadow: 0 3px 10px rgba(0, 0, 0, .2);
 }
+
+#prj-vid {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: transform 0.3s ease;
+}
+    .prj-img:hover video {
+        transform: scale(1.1);
+    }
 
 .prj-item .prj-img img {
     width: 100%;
@@ -172,6 +183,7 @@ a:visited {
     width: 100%;
     font-family: 'DM Mono', monospace;
 }
+
 
 .prj-title {
     margin: 0;
@@ -196,6 +208,7 @@ a:visited {
 }
 
 .prj-desc {
+    display: none;
     margin: 8px 0;
     padding: 0;
     font-size: 13px;
