--- a/styles/styles.css
+++ b/styles/styles.css
@@ -167,6 +167,10 @@ body, html {
     object-fit: cover;
 }
 
+    .prj-img:hover video {
+        
+    }
+
 #prj-vid {
     width: 100%;
     height: 100%;
