--- a/styles/styles.css
+++ b/styles/styles.css
@@ -19,7 +19,7 @@ body, html {
     overflow: auto;
 }
 
-.bg-img img {
+.bg-img video {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -164,6 +164,8 @@ body, html {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    background: transparent;
+    cursor: crosshair;
 }
 
 
