--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,10 +6,10 @@ body, html {
 .bg-img {
     background-position: center;
     background-repeat: repeat;
-    background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
+    background-size: cover;
    
     z-index: -1;
 
@@ -158,14 +158,17 @@ body, html {
     width: 300px;
     height: 240px;
     box-shadow: 0 3px 10px rgba(0, 0, 0, .2);
+    min-height: 240px;
 }
 
 .prj-img video {
     width: 100%;
     height: 100%;
+    -o-object-fit: cover;
     object-fit: cover;
     background: transparent;
     cursor: crosshair;
+    
 }
 
 
