--- a/styles/styles.css
+++ b/styles/styles.css
@@ -64,6 +64,12 @@ body, html {
     left: 8%;
 }
 
+    @media only screen and (max-width: 740px) {
+        .hover-info {
+            display: none;
+        }
+    }
+
 .contact-card h2 {
     font-size: 15px;
     line-height: 18px;
@@ -166,9 +172,8 @@ body, html {
     height: 100%;
     -o-object-fit: cover;
     object-fit: cover;
-    background: transparent;
+    background: white;
     cursor: crosshair;
-    
 }
 
 
