--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,6 +3,10 @@ body, html {
     background-color: transparent;
 }
 
+.hidden {
+    display: none;
+}
+
 .bg-img {
     background-position: center;
     background-repeat: repeat;
@@ -33,7 +37,7 @@ body, html {
 
 .titlebanner {
     margin: 0 auto;
-    width: 590px;
+    width: 660px;
     padding: 10px;
     position: relative;
     color: white;
