--- a/styles/styles.css
+++ b/styles/styles.css
@@ -375,7 +375,7 @@ body, html {
 
     .contact-card {
         top: 50px;
-        left: 0;
+        left: 15px;
     }
 
     .prj-grid {
@@ -391,6 +391,10 @@ body, html {
         width: 350px;
         height: 280px;
     }
+
+    .video {
+        width: 100%;
+        background-color: white;
 
     .bg-me {
         background-position: center;
